fix(package): set private to false in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nerd/sandpack",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "workspaces": [
     "sandpack-client",
     "sandpack-react",
