--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@nerd/sandpack",
   "version": "1.0.0",
-  "private": false,
   "workspaces": [
     "sandpack-client",
     "sandpack-react",
@@ -71,5 +70,8 @@
   },
   "dependencies": {
     "eslint-plugin-flowtype": "^8.0.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
