actualiza los nombres y versiones en package.json para reflejar la nueva estructura del proyecto

--- a/sandpack-react/package.json
+++ b/sandpack-react/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@codesandbox/sandpack-react",
-  "version": "2.20.0",
+  "name": "@nerdlat/sandpack-react",
+  "version": "0.1.0",
   "description": "",
   "keywords": [],
   "repository": {
     "type": "git",
-    "url": "https://github.com/codesandbox/sandpack"
+    "url": "https://github.com/owellandry/sandpack"
   },
   "license": "Apache-2.0",
-  "author": "CodeSandbox",
+  "author": "owellandry",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
